--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "node-ads1x15",
-  "version": "1.0.3",
-  "description": "Node module for the I2C ADS1x15 anaolg to digital converters to run on Raspberry Pi",
+  "name": "dzltest-ads1x15",
+  "version": "1.0.1",
+  "description": "Node module for the I2C ADS1x15 analog to digital converters to run on Raspberry Pi",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
-    "url": "https://alphacharlie@github.com/alphacharlie/node-ads1x15.git"
+    "url": "https://github.com/RatherLogical/node-ads1x15.git"
   },
   "keywords": [
     "ads1015"
   ],
-  "author": "Chuck Werbick <info@boffinry.org> (http://boffinry.org)",
+  "contributors": [
+    "Chuck Werbick <info@boffinry.org> (http://boffinry.org)",
+    "DZLTEST <sales@motorsportdiesel.com> (https://dzltest.com)"
+  ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alphacharlie/node-ads1x15/issues"
+    "url": "https://github.com/RatherLogical/node-ads1x15/issues"
   },
-  "homepage": "https://github.com/alphacharlie/node-ads1x15",
+  "homepage": "https://github.com/RatherLogical/node-ads1x15",
   "dependencies": {
-    "async": "^0.9.0",
     "i2c": "^0.2.1"
   },
   "devDependencies": {
